iptables/ip6tables.rules
# Generated by ip6tables-save v1.8.4 on Thu Jun  4 00:28:25 2020
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jun  4 00:28:25 2020
# Generated by ip6tables-save v1.8.4 on Thu Jun  4 00:28:25 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jun  4 00:28:25 2020
# Generated by ip6tables-save v1.8.4 on Thu Jun  4 00:28:25 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:lk_check - [0:0]
:lk_forward - [0:0]
:lk_input - [0:0]
:lk_reject - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -j lk_check
-A INPUT -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 133 -j ACCEPT
-A INPUT -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 134 -j ACCEPT
-A INPUT -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 135 -j ACCEPT
-A INPUT -p ipv6-icmp -m hl --hl-eq 255 -m icmp6 --icmpv6-type 136 -j ACCEPT
-A INPUT -j lk_input
-A INPUT -j lk_reject
-A FORWARD -j lk_check
-A FORWARD -j lk_forward
-A FORWARD -j lk_reject
-A lk_check -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A lk_check -m conntrack --ctstate INVALID -j DROP
-A lk_check -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j REJECT --reject-with tcp-reset
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 129 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A lk_check -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 22 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 80 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 443 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 139 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 445 -j ACCEPT
-A lk_input -p udp -m udp --dport 137:138 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 9003 -j ACCEPT
-A lk_reject -p udp -m udp -j REJECT --reject-with icmp6-port-unreachable
-A lk_reject -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A lk_reject -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Thu Jun  4 00:28:25 2020
