iptables/iptables.rules
# Generated by iptables-save v1.8.4 on Thu Jun  4 00:24:51 2020
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jun  4 00:24:51 2020
# Generated by iptables-save v1.8.4 on Thu Jun  4 00:24:51 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Jun  4 00:24:51 2020
# Generated by iptables-save v1.8.4 on Thu Jun  4 00:24:51 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:lk_check - [0:0]
:lk_forward - [0:0]
:lk_input - [0:0]
:lk_reject - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -j lk_check
-A INPUT -j lk_input
-A INPUT -j lk_reject
-A FORWARD -j lk_check
-A FORWARD -j lk_forward
-A FORWARD -j lk_reject
-A lk_check -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A lk_check -m conntrack --ctstate INVALID -j DROP
-A lk_check -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j REJECT --reject-with tcp-reset
-A lk_check -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A lk_input -p tcp -m tcp --dport 22 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 80 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 443 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 139 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 445 -j ACCEPT
-A lk_input -p udp -m udp --dport 137:138 -j ACCEPT
-A lk_input -p tcp -m tcp --dport 9003 -j ACCEPT
-A lk_reject -p udp -m udp -j REJECT --reject-with icmp-port-unreachable
-A lk_reject -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A lk_reject -j REJECT --reject-with icmp-proto-unreachable
COMMIT
# Completed on Thu Jun  4 00:24:51 2020
